added most of html

--- a/index.html
+++ b/index.html
@@ -11,58 +11,130 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
+    <!-- Header and landing -->
     <header>
-      <h3>Hi I'm Nate</h3>
+      <h3>Nate Yeow</h3>
       <h1>A Web Developer</h1>
     </header>
 
+    <!-- Main section -->
     <main>
+      <!-- About me section -->
       <section>
         <img src="" alt="" />
         <div>
           <h2>About Me</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-            sequi molestiae, eius dolore id quidem in! Sequi cumque obcaecati
-            similique temporibus laborum ducimus rem magni consequuntur odit
-            corrupti, veritatis eum.
+            Hi I'm Nate, a Front-End Web Developer based out of Oakville and a
+            recent graduate of Juno College of Technology. Additionally, I have
+            a Honors Bachelor of Arts from the University of Toronto and a
+            certificate of digital communications from Sheridan College. As an
+            individual that loves to learn, I am always challenging myself to
+            stay on top of new tools and web-development content. When it comes
+            to development and design, my goal is to create applications that
+            are responsive, accessible, creative and minimalistic.
+          </p>
+          <p>
+            Aside from coding, I enjoy watching and playing sports, playing
+            video games, traveling, and photography.
           </p>
         </div>
       </section>
+
+      <!-- Projects section -->
       <section>
         <h2>Projects</h2>
-       <ul>
-         <li>
-          <img src="" alt="">
+        <div>
+          <img src="" alt="" />
           <div>
             <h3>Go Fetch</h3>
-            <p></p>
+            <p>
+              Are you on team dogs? Looking to relax with some GIF's of dogs or
+              curious about a specifc breed? Go Fetch is the app for you. This
+              app fetches a grouping of GIF's from the Giphy API to display for
+              your viewing pleasure. Additionally, users can enter a specific
+              name or select a location to fetch more information about
+              different dogs from the Dog API.
+            </p>
+            <a href="">View app</a> <a href="">View code</a>
+            <h3>Made with</h3>
+            <ul>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+            </ul>
           </div>
-         </li>
-         <li>
-          <img src="" alt="">
+        </div>
+        <div>
+          <img src="" alt="" />
           <div>
             <h3>Pian&sup2;o</h3>
-            <p></p>
+            <p>
+              I don't play the piano... but you can! Play your favourite song
+              using your keyboard, mouse or finger. Pian&sup2;o allows users to
+              play any song they want as long as they can keep it within one
+              octave. Audio files are saved on Firebase Storage and a specific
+              file is called based on which key is pressed.
+            </p>
+            <a href="">View app</a> <a href="">View code</a>
+            <h3>Made with</h3>
+            <ul>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+            </ul>
           </div>
-         </li>
-         <li>
-          <img src="" alt="">
+        </div>
+        <div>
+          <img src="" alt="" />
           <div>
             <h3>Ask Zoltan</h3>
-            <p></p>
+            <p>
+              Need advice? Ask Zoltan. A totally unique fortune telling app that
+              totally isn't based off a machine... Part of an agency styled
+              assignment, the objective of this project was to create an app
+              that matched the request of a client. This app allows users to
+              enter a keyword which will return a piece of advice back to them
+              from the Advice Slip API once they have completed solving a maze.
+            </p>
+            <a href="">View app</a> <a href="">View code</a>
+            <h3>Made with</h3>
+            <ul>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+            </ul>
           </div>
-         </li>
-       </ul>
         </div>
       </section>
+
+      <!-- Skills section -->
       <section>
         <h2>Skills</h2>
+        <div class="gridContainer">
+          <div class="gridItem">1</div>
+          <div class="gridItem">2</div>
+          <div class="gridItem">3</div>
+          <div class="gridItem">4</div>
+          <div class="gridItem">5</div>
+        </div>
+      </section>
+
+      <!-- Contact section -->
+      <section>
+        <h2>Contact</h2>
       </section>
     </main>
 
+    <!-- Footer section -->
     <footer>
       <p>Developed by Nate Yeow</p>
     </footer>
