--- a/index.html
+++ b/index.html
@@ -120,11 +120,13 @@
       <section>
         <h2>Skills</h2>
         <div class="gridContainer">
-          <div class="gridItem">1</div>
-          <div class="gridItem">2</div>
-          <div class="gridItem">3</div>
-          <div class="gridItem">4</div>
-          <div class="gridItem">5</div>
+          <i class="fab fa-html5"></i>
+          <i class="fab fa-css3"></i>
+          <i class="fab fa-sass"></i>
+          <i class="fab fa-js-square"></i>
+          <i class="fab fa-react"></i>
+          <i class="fab fa-figma"></i>
+          <i class="fab fa-github-square"></i>
         </div>
       </section>
 
