--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               comes to development and design, my goal is to create applications
               that are responsive, accessible, creative and minimalistic.
             </p>
-            <p>
+            <p class="secondP">
               Aside from coding, I enjoy watching and playing sports, playing
               video games, traveling, and photography.
             </p>
@@ -73,7 +73,7 @@
                 about different dogs from the Dog API.
               </p>
               <a href="">View app</a> <a href="">View code</a>
-              <h3>Made with</h3>
+              <h4>Made with</h4>
               <ul class="projectsIcons">
                 <li>
                   <img src="./assets/inkscapeIcon.svg" alt="Inkscape icon" />
@@ -103,7 +103,7 @@
                 specific file is called based on which key is pressed.
               </p>
               <a href="">View app</a> <a href="">View code</a>
-              <h3>Made with</h3>
+              <h4>Made with</h4>
               <ul class="projectsIcons">
                 <li><img src="./assets/reactIcon.svg" alt="React icon" /></li>
                 <li><img src="./assets/cssIcon.svg" alt="CSS icon" /></li>
@@ -128,7 +128,7 @@
                 solving a maze.
               </p>
               <a href="">View app</a> <a href="">View code</a>
-              <h3>Made with</h3>
+              <h4>Made with</h4>
               <ul class="projectsIcons">
                 <li><img src="./assets/figmaIcon.svg" alt="Figma icon" /></li>
                 <li><img src="./assets/reactIcon.svg" alt="React icon" /></li>
