--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
   <body>
     <!-- Header and landing -->
     <header>
-      <div class="wrapper">
+      <div class="wrapper landingWords">
         <div>
           <h2>Nate Yeow</h2>
-          <h1>Font-End Developer</h1>
+          <h1>Front-End Developer</h1>
         </div>
-        <i class="fas fa-chevron-down"></i>
+        <div class="headerIcon">
+          <i class="fas fa-chevron-down"></i>
+        </div>
       </div>
     </header>
 
@@ -35,23 +37,31 @@
       <!-- About me section -->
       <section class="about">
         <div class="wrapper">
-          <img src="" alt="" />
-          <div>
-            <h2>About Me</h2>
-            <p>
-              Hi I'm Nate, a Front-End Web Developer based out of Oakville and a
-              recent graduate of Juno College of Technology. Additionally, I
-              have a Honors Bachelor of Arts from the University of Toronto and
-              a certificate of digital communications from Sheridan College. As
-              an individual that loves to learn, I am always challenging myself
-              to stay on top of new tools and web-development content. When it
-              comes to development and design, my goal is to create applications
-              that are responsive, accessible, creative and minimalistic.
-            </p>
-            <p class="secondP">
-              Aside from coding, I enjoy watching and playing sports, playing
-              video games, traveling, and photography.
-            </p>
+          <h2>About Me</h2>
+          <div class="aboutImgTxt">
+            <img
+              src="./assets/portfolioImg.jpg"
+              alt="a guy sitting on a stair"
+            />
+            <div class="aboutTxt">
+              <p>
+                Hi I'm Nate, a Front-End Web Developer based out of Oakville and
+                a recent graduate of Juno College of Technology. Additionally, I
+                have a Honors Bachelor of Arts from the University of Toronto
+                and a certificate of digital communications from Sheridan
+                College. As an individual that loves to learn, I am always
+                challenging myself to stay on top of new tools and
+                web-development content. When it comes to development and
+                design, my goal is to create applications that are responsive,
+                accessible, creative and minimalistic.
+              </p>
+              <p class="secondP">
+                Aside from coding, I enjoy watching and playing sports, playing
+                video games, traveling, and photography.
+              </p>
+
+              <a href="">Resume</a> <a href="">GitHub</a>
+            </div>
           </div>
         </div>
       </section>
@@ -72,7 +82,10 @@
                 a specific name or select a location to fetch more information
                 about different dogs from the Dog API.
               </p>
-              <a href="">View app</a> <a href="">View code</a>
+              <div class="view">
+                <p><a href="">View app</a></p>
+                <p><a href="">View code</a></p>
+              </div>
               <h4>Made with</h4>
               <ul class="projectsIcons">
                 <li>
@@ -102,7 +115,10 @@
                 one octave. Audio files are saved on Firebase Storage and a
                 specific file is called based on which key is pressed.
               </p>
-              <a href="">View app</a> <a href="">View code</a>
+              <div class="view">
+                <p><a href="">View app</a></p>
+                <p><a href="">View code</a></p>
+              </div>
               <h4>Made with</h4>
               <ul class="projectsIcons">
                 <li><img src="./assets/reactIcon.svg" alt="React icon" /></li>
@@ -127,7 +143,10 @@
                 back to them from the Advice Slip API once they have completed
                 solving a maze.
               </p>
-              <a href="">View app</a> <a href="">View code</a>
+              <div class="view">
+                <p><a href="">View app</a></p>
+                <p><a href="">View code</a></p>
+              </div>
               <h4>Made with</h4>
               <ul class="projectsIcons">
                 <li><img src="./assets/figmaIcon.svg" alt="Figma icon" /></li>
@@ -148,23 +167,40 @@
       <section class="skills">
         <div class="wrapper">
           <h2>Skills</h2>
-          <div>
-            <div class="iconGrpOne">
-              <img src="./assets/htmlIcon.svg" alt="HTML icon" />
-              <img src="./assets/cssIcon.svg" alt="CSS icon" />
-              <img src="./assets/javascriptIcon.svg" alt="Javascript icon" />
-              <img src="./assets/sassIcon.svg" alt="SASS icon" />
-              <img src="./assets/reactIcon.svg" alt="React icon" />
-              <img src="./assets/gitIcon.svg" alt="Git icon" />
-            </div>
-            <div class="iconGrpTwo">
-              <img src="./assets/terminalIcon.svg" alt="Terminal icon" />
-              <img src="./assets/inkscapeIcon.svg" alt="Inkscape icon" />
-              <img src="./assets/adobeIcon.svg" alt="Adobe icon" />
-              <img src="./assets/figmaIcon.svg" alt="Figma icon" />
-              <img src="./assets/firebaseIcon.svg" alt="Firebase icon" />
-              <img src="./assets/apiIcon.svg" alt="API icon" />
-            </div>
+          <div class="icon">
+            <img src="./assets/htmlIcon.svg" alt="HTML icon" title="HTML5" />
+            <img src="./assets/cssIcon.svg" alt="CSS icon" title="CSS3" />
+            <img
+              src="./assets/javascriptIcon.svg"
+              alt="Javascript icon"
+              title="JavaScript"
+            />
+            <img src="./assets/sassIcon.svg" alt="SASS icon" title="SASS" />
+            <img src="./assets/reactIcon.svg" alt="React icon" title="React" />
+            <img src="./assets/gitIcon.svg" alt="Git icon" title="GIT" />
+
+            <img
+              src="./assets/terminalIcon.svg"
+              alt="Terminal icon"
+              title="Terminal"
+            />
+            <img
+              src="./assets/inkscapeIcon.svg"
+              alt="Inkscape icon"
+              title="Inkscape"
+            />
+            <img
+              src="./assets/adobeIcon.svg"
+              alt="Adobe icon"
+              title="Adobe Creative Cloud"
+            />
+            <img src="./assets/figmaIcon.svg" alt="Figma icon" title="Figma" />
+            <img
+              src="./assets/firebaseIcon.svg"
+              alt="Firebase icon"
+              title="Firebase"
+            />
+            <img src="./assets/apiIcon.svg" alt="API icon" title="API" />
           </div>
         </div>
       </section>
