--- a/index.html
+++ b/index.html
@@ -66,104 +66,6 @@
         </div>
       </section>
 
-      <!-- Projects section -->
-      <section class="projects">
-        <div class="wrapper">
-          <h2>Projects</h2>
-          <div>
-            <img src="" alt="" />
-            <div>
-              <h3>Go Fetch</h3>
-              <p>
-                Are you on team dogs? Looking to relax with some GIF's of dogs
-                or curious about a specifc breed? Go Fetch is the app for you.
-                This app fetches a grouping of GIF's from the Giphy API to
-                display for your viewing pleasure. Additionally, users can enter
-                a specific name or select a location to fetch more information
-                about different dogs from the Dog API.
-              </p>
-              <div class="view">
-                <p><a href="">View app</a></p>
-                <p><a href="">View code</a></p>
-              </div>
-              <h4>Made with</h4>
-              <ul class="projectsIcons">
-                <li>
-                  <img src="./assets/inkscapeIcon.svg" alt="Inkscape icon" />
-                </li>
-                <li><img src="./assets/htmlIcon.svg" alt="HTML icon" /></li>
-                <li><img src="./assets/sassIcon.svg" alt="SASS icon" /></li>
-                <li>
-                  <img
-                    src="./assets/javascriptIcon.svg"
-                    alt="Javascript icon"
-                  />
-                </li>
-                <li><img src="./assets/apiIcon.svg" alt="API icon" /></li>
-                <li><img src="./assets/gitIcon.svg" alt="Git icon" /></li>
-              </ul>
-            </div>
-          </div>
-          <div>
-            <img src="" alt="" />
-            <div>
-              <h3>Pian&sup2;o</h3>
-              <p>
-                I don't play the piano... but you can! Play your favourite song
-                using your keyboard, mouse or finger. Pian&sup2;o allows users
-                to play any song they want as long as they can keep it within
-                one octave. Audio files are saved on Firebase Storage and a
-                specific file is called based on which key is pressed.
-              </p>
-              <div class="view">
-                <p><a href="">View app</a></p>
-                <p><a href="">View code</a></p>
-              </div>
-              <h4>Made with</h4>
-              <ul class="projectsIcons">
-                <li><img src="./assets/reactIcon.svg" alt="React icon" /></li>
-                <li><img src="./assets/cssIcon.svg" alt="CSS icon" /></li>
-                <li>
-                  <img src="./assets/firebaseIcon.svg" alt="Firebase icon" />
-                </li>
-                <li><img src="./assets/gitIcon.svg" alt="Git icon" /></li>
-              </ul>
-            </div>
-          </div>
-          <div>
-            <img src="" alt="" />
-            <div>
-              <h3>Ask Zoltan</h3>
-              <p>
-                Need advice? Ask Zoltan. A totally unique fortune telling app
-                that totally isn't based off a machine... Part of an agency
-                styled assignment, the objective of this project was to create
-                an app that matched the request of a client. This app allows
-                users to enter a keyword which will return a piece of advice
-                back to them from the Advice Slip API once they have completed
-                solving a maze.
-              </p>
-              <div class="view">
-                <p><a href="">View app</a></p>
-                <p><a href="">View code</a></p>
-              </div>
-              <h4>Made with</h4>
-              <ul class="projectsIcons">
-                <li><img src="./assets/figmaIcon.svg" alt="Figma icon" /></li>
-                <li><img src="./assets/reactIcon.svg" alt="React icon" /></li>
-                <li><img src="./assets/cssIcon.svg" alt="CSS icon" /></li>
-                <li><img src="./assets/apiIcon.svg" alt="API icon" /></li>
-                <li>
-                  <img src="./assets/firebaseIcon.svg" alt="Firebase icon" />
-                </li>
-                <li><img src="./assets/gitIcon.svg" alt="Git icon" /></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Skills section -->
       <section class="skills">
         <div class="wrapper">
           <h2>Skills</h2>
@@ -201,6 +103,115 @@
               title="Firebase"
             />
             <img src="./assets/apiIcon.svg" alt="API icon" title="API" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Projects section -->
+      <section class="projects">
+        <div class="wrapper">
+          <h2>Projects</h2>
+          <div class="projectGrouping">
+            <div class="screenShots">
+              <img
+                src="./assets/goFetchSS.png"
+                alt="Screen shot of Go Fetch app"
+              />
+            </div>
+            <div>
+              <h3>Go Fetch</h3>
+              <p>
+                Are you on team dogs? Looking to relax with some GIF's of dogs
+                or curious about a specifc breed? Go Fetch is the app for you.
+                This app fetches a grouping of GIF's from the Giphy API to
+                display for your viewing pleasure. Additionally, users can enter
+                a specific name or select a location to fetch more information
+                about different dogs from the Dog API.
+              </p>
+              <div class="view">
+                <p><a href="">View live</a></p>
+                <p><a href="">View code</a></p>
+              </div>
+              <h4>Made with</h4>
+              <ul class="projectsIcons">
+                <li>
+                  <img src="./assets/inkscapeIcon.svg" alt="Inkscape icon" />
+                </li>
+                <li><img src="./assets/htmlIcon.svg" alt="HTML icon" /></li>
+                <li><img src="./assets/sassIcon.svg" alt="SASS icon" /></li>
+                <li>
+                  <img
+                    src="./assets/javascriptIcon.svg"
+                    alt="Javascript icon"
+                  />
+                </li>
+                <li><img src="./assets/apiIcon.svg" alt="API icon" /></li>
+                <li><img src="./assets/gitIcon.svg" alt="Git icon" /></li>
+              </ul>
+            </div>
+          </div>
+          <div class="projectGrouping">
+            <div class="screenShots odd">
+              <img src="./assets/pianoSS.png" alt="Screen shot of Piano app" />
+            </div>
+            <div>
+              <h3>Pian&sup2;o</h3>
+              <p>
+                I don't play the piano... but you can! Play your favourite song
+                using your keyboard, mouse or finger. Pian&sup2;o allows users
+                to play any song they want as long as they can keep it within
+                one octave. Audio files are saved on Firebase Storage and a
+                specific file is called based on which key is pressed.
+              </p>
+              <div class="view">
+                <p><a href="">View live</a></p>
+                <p><a href="">View code</a></p>
+              </div>
+              <h4>Made with</h4>
+              <ul class="projectsIcons">
+                <li><img src="./assets/reactIcon.svg" alt="React icon" /></li>
+                <li><img src="./assets/cssIcon.svg" alt="CSS icon" /></li>
+                <li>
+                  <img src="./assets/firebaseIcon.svg" alt="Firebase icon" />
+                </li>
+                <li><img src="./assets/gitIcon.svg" alt="Git icon" /></li>
+              </ul>
+            </div>
+          </div>
+          <div class="projectGrouping">
+            <div class="screenShots">
+              <img
+                src="./assets/askZoltanSS.png"
+                alt="Screen shot of Ask Zoltan app"
+              />
+            </div>
+            <div>
+              <h3>Ask Zoltan</h3>
+              <p>
+                Need advice? Ask Zoltan. A totally unique fortune telling app
+                that totally isn't based off a machine... Part of an agency
+                styled assignment, the objective of this project was to create
+                an app that matched the request of a client. This app allows
+                users to enter a keyword which will return a piece of advice
+                back to them from the Advice Slip API once they have completed
+                solving a maze.
+              </p>
+              <div class="view">
+                <p><a href="">View live</a></p>
+                <p><a href="">View code</a></p>
+              </div>
+              <h4>Made with</h4>
+              <ul class="projectsIcons">
+                <li><img src="./assets/figmaIcon.svg" alt="Figma icon" /></li>
+                <li><img src="./assets/reactIcon.svg" alt="React icon" /></li>
+                <li><img src="./assets/cssIcon.svg" alt="CSS icon" /></li>
+                <li><img src="./assets/apiIcon.svg" alt="API icon" /></li>
+                <li>
+                  <img src="./assets/firebaseIcon.svg" alt="Firebase icon" />
+                </li>
+                <li><img src="./assets/gitIcon.svg" alt="Git icon" /></li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
