added links to live apps and code

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             <div class="aboutTxt">
               <p>
                 Hi I'm Nate, a Front-End Web Developer based out of Oakville and
-                a recent graduate of Juno College of Technology. Additionally, I
-                have a Honors Bachelor of Arts from the University of Toronto
-                and a certificate of digital communications from Sheridan
-                College. As an individual that loves to learn, I am always
-                challenging myself to stay on top of new tools and
+                a recent graduate of Juno College of Technology. I am also a
+                graduate of the University of Toronto and Sheridan College, with
+                an Honours Bachelors of Arts and a certificate of digital
+                communications. As an individual that loves to learn, I am
+                always challenging myself to stay on top of new tools and
                 web-development content. When it comes to development and
                 design, my goal is to create applications that are responsive,
                 accessible, creative and minimalistic.
@@ -60,7 +60,8 @@
                 video games, traveling, and photography.
               </p>
 
-              <a href="">Resume</a> <a href="">GitHub</a>
+              <a href="" target="_blank">Resume</a>
+              <a href="https://github.com/NateY98" target="_blank">GitHub</a>
             </div>
           </div>
         </div>
@@ -118,7 +119,7 @@
                 alt="Screen shot of Go Fetch app"
               />
             </div>
-            <div>
+            <div class="projectTxt">
               <h3>Go Fetch</h3>
               <p>
                 Are you on team dogs? Looking to relax with some GIF's of dogs
@@ -129,8 +130,20 @@
                 about different dogs from the Dog API.
               </p>
               <div class="view">
-                <p><a href="">View live</a></p>
-                <p><a href="">View code</a></p>
+                <p>
+                  <a
+                    href="https://natey98.github.io/go-fetch-app/"
+                    target="_blank"
+                    >View live</a
+                  >
+                </p>
+                <p>
+                  <a
+                    href="https://github.com/go-fetch-app/go-fetch-app"
+                    target="_blank"
+                    >View code</a
+                  >
+                </p>
               </div>
               <h4>Made with</h4>
               <ul class="projectsIcons">
@@ -154,7 +167,7 @@
             <div class="screenShots odd">
               <img src="./assets/pianoSS.png" alt="Screen shot of Piano app" />
             </div>
-            <div>
+            <div class="projectTxt oddTxt">
               <h3>Pian&sup2;o</h3>
               <p>
                 I don't play the piano... but you can! Play your favourite song
@@ -164,8 +177,20 @@
                 specific file is called based on which key is pressed.
               </p>
               <div class="view">
-                <p><a href="">View live</a></p>
-                <p><a href="">View code</a></p>
+                <p>
+                  <a
+                    href="https://natalie-tso-nate-yeow-project-three.netlify.app/"
+                    target="_blank"
+                    >View live</a
+                  >
+                </p>
+                <p>
+                  <a
+                    href="https://github.com/nat-squared/natalieTsoNateYeowReactPiano/tree/production"
+                    target="_blank"
+                    >View code</a
+                  >
+                </p>
               </div>
               <h4>Made with</h4>
               <ul class="projectsIcons">
@@ -185,7 +210,7 @@
                 alt="Screen shot of Ask Zoltan app"
               />
             </div>
-            <div>
+            <div class="projectTxt">
               <h3>Ask Zoltan</h3>
               <p>
                 Need advice? Ask Zoltan. A totally unique fortune telling app
@@ -197,8 +222,18 @@
                 solving a maze.
               </p>
               <div class="view">
-                <p><a href="">View live</a></p>
-                <p><a href="">View code</a></p>
+                <p>
+                  <a href="https://nygma-machine.netlify.app/" target="_blank"
+                    >View live</a
+                  >
+                </p>
+                <p>
+                  <a
+                    href="https://github.com/juno-zoltan/nygma-machine/tree/prod"
+                    target="_blank"
+                    >View code</a
+                  >
+                </p>
               </div>
               <h4>Made with</h4>
               <ul class="projectsIcons">
