finished contact section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <!-- Header and landing -->
@@ -39,21 +45,24 @@
         <div class="wrapper">
           <h2>About Me</h2>
           <div class="aboutImgTxt">
-            <img
-              src="./assets/portfolioImg.jpg"
-              alt="a guy sitting on a stair"
-            />
+            <div class="aboutImg">
+              <img
+                src="./assets/portfolioImgColour.jpg"
+                alt="a guy sitting on a stair"
+              />
+            </div>
             <div class="aboutTxt">
               <p>
-                Hi I'm Nate, a Front-End Web Developer based out of Oakville and
-                a recent graduate of Juno College of Technology. I am also a
-                graduate of the University of Toronto and Sheridan College, with
-                an Honours Bachelors of Arts and a certificate of digital
-                communications. As an individual that loves to learn, I am
-                always challenging myself to stay on top of new tools and
-                web-development content. When it comes to development and
-                design, my goal is to create applications that are responsive,
-                accessible, creative and minimalistic.
+                Hi I'm Nathaniel more commonly known as Nate. I am a Front-End
+                Web Developer based out of Oakville and a recent graduate of
+                Juno College of Technology. I am also a graduate of the
+                University of Toronto and Sheridan College, with an Honours
+                Bachelors of Arts and a certificate of digital communications.
+                As an individual that loves to learn, I am always challenging
+                myself to stay on top of new tools and web-development content.
+                When it comes to development and design, my goal is to create
+                applications that are responsive, accessible, creative and
+                minimalistic.
               </p>
               <p class="secondP">
                 Aside from coding, I enjoy watching and playing sports, playing
@@ -255,6 +264,29 @@
       <section class="contact">
         <div class="wrapper">
           <h2>Contact</h2>
+          <div>
+            <p>nathaniel.yeow@gmail.com</p>
+            <ul>
+              <li>
+                <a href="https://github.com/NateY98" target="_blank">
+                  <i class="fab fa-github-square"></i>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/nathaniel-yeow/"
+                  target="_blank"
+                >
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/jpg_ny/" target="_blank">
+                  <i class="fab fa-instagram-square"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
