--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
           <h1>Front-End Developer</h1>
         </div>
         <div class="headerIcon">
-          <i class="fas fa-chevron-down"></i>
+          <a href="#about">
+            <i class="fas fa-chevron-down"></i>
+          </a>
         </div>
       </div>
     </header>
