fixing some wording

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 Hi I'm Nathaniel more commonly known as Nate. I am a Front-End
                 Web Developer based out of Oakville and a recent graduate of
                 Juno College of Technology. I am also a graduate of the
-                University of Toronto and Sheridan College, with an Honours
+                University of Toronto and Sheridan College with an Honours
                 Bachelors of Arts and a certificate of digital communications.
                 As an individual that loves to learn, I am always challenging
                 myself to stay on top of new tools and web-development content.
