added more media queries

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
       <section class="about" id="about">
         <div class="wrapper">
           <h2>About</h2>
+          <div class="hiddenPortImg">
+            <img src="./assets/portfolioImgLandscape.jpg" alt="a guy sitting on a stair">
+          </div>
           <div class="aboutImgTxt">
             <div class="aboutImg">
               <img
@@ -145,9 +148,11 @@
                 Aside from coding, I enjoy watching and playing sports, playing
                 video games, traveling, and photography.
               </p>
-
-              <a href="" target="_blank">Resume</a>
-              <a href="https://github.com/NateY98" target="_blank">GitHub</a>
+              <div class="aboutLinks">
+                <a href="" target="_blank">Resume</a>
+                <a href="https://github.com/NateY98" target="_blank">GitHub</a>
+                <a href="#contact"> Contact</a>
+              </div>
             </div>
           </div>
         </div>
