--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
           </div>
           <div class="navContainer">
             <ul class="nav">
-              <li><a href="#about"> About</a></li>
-              <li><a href="#skills">Skills</a></li>
-              <li><a href="#projects">Projects</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="liOne"><a href="#about"> About</a></li>
+              <li class="liTwo"><a href="#skills">Skills</a></li>
+              <li class="liThree"><a href="#projects">Projects</a></li>
+              <li class="liFour"><a href="#contact">Contact</a></li>
             </ul>
           </div>
       
@@ -389,7 +389,7 @@
         <div class="wrapper">
           <h2>Contact</h2>
           <div>
-            <p class="email">nathaniel.yeow@gmail.com</p>
+            <p class="email"> <a href="mailto:nathaniel.yeow@gmail.com">nathaniel.yeow@gmail.com</a> </p>
             <ul>
               <li>
                 <a href="https://github.com/NateY98" target="_blank">
