--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
             <div class="barThree"></div>
           </div>
           <div class="navContainer">
-            <ul class="nav">
-              <li class="liOne"><a href="#about"> About</a></li>
-              <li class="liTwo"><a href="#skills">Skills</a></li>
-              <li class="liThree"><a href="#projects">Projects</a></li>
-              <li class="liFour"><a href="#contact">Contact</a></li>
-            </ul>
+            <nav>
+              <ul class="nav">
+                <li class="liOne"><a href="#about"> About</a></li>
+                <li class="liTwo"><a href="#skills">Skills</a></li>
+                <li class="liThree"><a href="#projects">Projects</a></li>
+                <li class="liFour"><a href="#contact">Contact</a></li>
+              </ul>
+            </nav>
           </div>
       
         
