--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Nate Yeow Personal Portfolio">
     <title>Nate Yeow</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="icon" href="./assets/myLogo.png">
     <link
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;700&display=swap"
       rel="stylesheet"
