--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         <div class="wrapper">
           <h2>Contact</h2>
           <div>
-            <p class="email"> <a href="mailto:nathaniel.yeow@gmail.com">nathaniel.yeow@gmail.com</a> </p>
+            <p class="email"> <a href="mailto:nathaniel.yeow@gmail.com">nathaniel.yeow(at)gmail.com</a> </p>
             <ul>
               <li>
                 <a href="https://github.com/NateY98" target="_blank">
