minor css changes and added link to resume

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 video games, traveling, and photography.
               </p>
               <div class="aboutLinks">
-                <a href="" target="_blank">Resume</a>
+                <a href="https://www.canva.com/design/DAEdcV-9za4/Ep4mw7mfMLq7iQpXYNkgHg/view?utm_content=DAEdcV-9za4&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank">Resume</a>
                 <a href="https://github.com/NateY98" target="_blank">GitHub</a>
                 <a href="#contact"> Contact</a>
               </div>
