added work in progress projects

--- a/index.html
+++ b/index.html
@@ -385,6 +385,40 @@
               </ul>
             </div>
           </div>
+          <section class="wip">
+            <h3 class="wipH3">Current Projects (In Progress)</h3>
+            <div class="projectGrouping">
+              <div class="screenShots">
+                <img
+                  src="./assets/htmlEmailSS.png"
+                  alt="Screen shot of HTML Email project"
+                />
+              </div>
+              <div class="projectTxt">
+                <h3>HTML Email</h3>
+                <p>
+                  Need advice? Ask Zoltan. A totally unique fortune telling app
+                  that totally isn't based off a machine... Part of an agency
+                  styled assignment, the objective of this project was to create
+                  an app that matched the request of a client. This app allows
+                  users to enter a keyword which will return a piece of advice
+                  back to them from the Advice Slip API once they have completed
+                  solving a maze.
+                </p>
+                <div class="view">
+                  <p>
+                    <a href="https://nygma-machine.netlify.app/" target="_blank"
+                      >View live</a
+                    >
+                  </p>
+                  <p>
+                    <a
+                      href="https://github.com/juno-zoltan/nygma-machine/tree/prod"
+                      target="_blank"
+                      >View code</a
+                    >
+                  </p>
+          </section>
         </div>
       </section>
 
