added work in progress and fixed some styling

--- a/index.html
+++ b/index.html
@@ -316,14 +316,14 @@
               <div class="view">
                 <p>
                   <a
-                    href="https://natalie-tso-nate-yeow-project-three.netlify.app/"
+                    href="https://nat-squared.github.io/reactPiano/"
                     target="_blank"
                     >View live</a
                   >
                 </p>
                 <p>
                   <a
-                    href="https://github.com/nat-squared/natalieTsoNateYeowReactPiano/tree/production"
+                    href="https://github.com/nat-squared/reactPiano/tree/production"
                     target="_blank"
                     >View code</a
                   >
@@ -397,27 +397,33 @@
               <div class="projectTxt">
                 <h3>HTML Email</h3>
                 <p>
-                  Need advice? Ask Zoltan. A totally unique fortune telling app
-                  that totally isn't based off a machine... Part of an agency
-                  styled assignment, the objective of this project was to create
-                  an app that matched the request of a client. This app allows
-                  users to enter a keyword which will return a piece of advice
-                  back to them from the Advice Slip API once they have completed
-                  solving a maze.
+                  Converted my Portfolio into a HTML promotional email. 
+                  At it's current state, it is not yet responsive and images only show on Gmail. 
+                  I learn HTML tables for this project and hosted my images on Dropbox. 
+                  Feel free to check out what it looks like on a browser by clicking "view live" 
+                  or check out the code by clicking "view code".
                 </p>
                 <div class="view">
                   <p>
-                    <a href="https://nygma-machine.netlify.app/" target="_blank"
+                    <a href="https://natey98.github.io/htmlEmail/" target="_blank"
                       >View live</a
                     >
                   </p>
                   <p>
                     <a
-                      href="https://github.com/juno-zoltan/nygma-machine/tree/prod"
+                      href="https://github.com/NateY98/htmlEmail"
                       target="_blank"
                       >View code</a
                     >
                   </p>
+                </div>
+                <h4>Made with</h4>
+                <ul class="projectsIcons">
+                  <li><img src="./assets/htmlIcon.svg" alt="HTML icon" /></li>
+                  <li><img src="./assets/cssIcon.svg" alt="CSS icon" /></li>
+                </ul>
+              </div>
+            </div>
           </section>
         </div>
       </section>
