added a SR for my name in header, changed my title

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
       
         
-          <!-- <h2>Nate Yeow</h2> -->
+          <span class="sr-only">Nate Yeow</span>
           <div class="animatedName">
             <svg
               class="logo"
@@ -108,7 +108,7 @@
             </svg>
           </div>
 
-          <h1>Front-End Developer</h1>
+          <h1>Web Development & Design</h1>
         </div>
         <div class="headerIcon">
           <a href="#about">
